test/Fail/NestedRecConstrInline.err
NestedRecConstrInline.agda:50.5-9: error: [UnequalTerms]
The terms
  x
and
  inc (inc 1 2) 3
are not equal at type Bar
when checking that the expression refl has type x ≡ inc (inc 1 2) 3
